tests/NormalTests/paczka1/fuzzy1/56148034.err
Error in line 4: hvX2mof1Az S813 40,3
Error in line 11: UxMkËcBË A655 16,8
Error in line 1: qovDjvQ A655 97,0
Error in line 7: hvX2mof1Az A310 75,0
Error in line 12: qovDjvQ A310 67,5
Error in line 3: 8TXeeDjB A655 82,2
Error in line 8: UxMk2cB2 A655 23,0
